# agile_software_development

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  touch_all_files.py
command_and_active_object/: CMakeLists.txt  Makefile  README.md  active_object_engine.cpp  active_object_engine.h  command.cpp  command.h  delayed_typer.cpp  delayed_typer.h  main.cpp  sleep_command.cpp  sleep_command.h  stop_command.cpp  stop_command.h
command_and_active_object/test/: CMakeLists.txt  Makefile  all_tests  test_sleep_command.cpp
template_method_and_strategy/: CMakeLists.txt  README.md  application.cpp  application.h  fahr.txt  ftoc_template_method.h
template_method_and_strategy/bubble_sort/: CMakeLists.txt  bubble_sorter.cpp  bubble_sorter.h  double_bubble_sorter.cpp  double_bubble_sorter.h  int_bubble_sorter.cpp  int_bubble_sorter.h  main.cpp
template_method_and_strategy/ftoc/: CMakeLists.txt  application.cpp  application.h  ftoc_template_method.cpp  ftoc_template_method.h  main.cpp
template_method_and_strategy/ftoc_strategy/: CMakeLists.txt  application.cpp  application.h  application_runner.cpp  application_runner.h  ftoc_strategy.cpp  ftoc_strategy.h  main.cpp
utils/: common_includes.h
